# Eye-LEAN

./: .gitignore  ACKNOWLEDGMENTS.md  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_calibration_persistence.md  feature_request.yml
.github/workflows/: python-tests.yml
Eye_lean_Unity_Project/Eye_lean/: CHANGELOG.md  README.md
Eye_lean_Unity_Project/Eye_lean/Assets/: DataExportSettings.asset  VIVEOpenXRInstaller.cs
Eye_lean_Unity_Project/Eye_lean/Assets/Editor/: EyeLean.Editor.asmdef  MainMenuSceneSetup.cs  ReplaySceneSetup.cs
Eye_lean_Unity_Project/Eye_lean/Assets/Scenes/: CalibrationScene.unity  MainMenu.unity  ReplayScene.unity  SampleExperiment.unity  Skeleton.unity
Eye_lean_Unity_Project/Eye_lean/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
Eye_lean_Unity_Project/Eye_lean/docs/: ALGORITHMS.md  ARCHITECTURE.md  BIBLIOGRAPHY.md  CUSTOM_METADATA_TUTORIAL.md  DATA_SCHEMA.md  REPLAY_SCENE_STATE.md  REPLAY_SYSTEM.md  RESEARCHER_GUIDE.md  SAMPLE_EXPERIMENT_SETUP.md  SETUP.md
docs/: BUILD_GUIDE.md  CALIBRATION.md  EXPERIMENT_UI.md  EYE_TRACKER.md  HMD_DATA.md  POST_HOC_CORRECTION.md  QUICKSTART.md  README.md  REPLAY.md  RIPA_MONITOR.md  SAMPLE_EXPERIMENT.md  SCENE_EVENTS.md  SCENE_STATE.md  SESSION_RECORDER.md  SKELETON.md  SKELETON_AGENTS.md  SKELETON_ENVIRONMENT.md  SKELETON_HANDLER.md  SKELETON_TRIALS.md  TROUBLESHOOTING.md
eyelean_analysis/: README.md  __init__.py  notebook_context.py  pyproject.toml  requirements.txt
eyelean_analysis/batch/: __init__.py  processor.py
eyelean_analysis/calibration/: __init__.py  posthoc_correction.py
eyelean_analysis/classification/: __init__.py  k_coefficient.py  velocity_classifier.py
eyelean_analysis/data/: __init__.py  loader.py  validator.py
eyelean_analysis/experiments/: __init__.py  sample_experiment.py
eyelean_analysis/filters/: __init__.py  butterworth.py  savitzky_golay.py
eyelean_analysis/metrics/: __init__.py  data_quality.py  entropy.py  lhipa.py  ripa2.py
eyelean_analysis/notebooks/: README.md
eyelean_analysis/notebooks/examples/: 01_quickstart.ipynb  02_explore_session.ipynb  03_data_quality.ipynb  04_eye_movements.ipynb  05_pupil_lhipa.ipynb  06_sample_experiment.ipynb  07_scene_sidecars.ipynb  08_posthoc_correction.ipynb  09_batch_processing.ipynb  10_heatmaps.ipynb
eyelean_analysis/tests/: conftest.py  test_batch.py  test_experiments.py  test_filters.py  test_fixation_entropy.py  test_k_coefficient.py  test_lhipa.py  test_loader.py  test_metrics_extra.py  test_notebook_context.py  test_posthoc_correction.py  test_ripa2.py  test_scene_sidecars.py  test_velocity_classifier.py
eyelean_analysis/visualization/: __init__.py  plots.py
(+155 files in other folders)
